[package]
name = "wr"
version = "0.1.0"
edition = "2021"
authors = ["M Imam Muttaqin <mimamtaqin@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
worker = { version = "0.7", features = ['http'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.3"
hmac = "0.12.1"
base64 = "0.22.1"
sha2 = "0.10.9"
serde = "1.0.228"
rsa = "0.9.9"
rand = "0.8"
getrandom = { version = "0.2.16", features = ["js"] }
serde_json = "1.0.145"
wasmtimer = "0.4.3"
